various design fixes

--- a/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
+++ b/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
@@ -31,7 +31,20 @@
         <div class="dummyHeader"></div>
         <div class="pageWrapper">
             <div class="siteContent">
-                    <h1>Jquery Test</h1>
+                <!--
+                <table width = '90%' align='center'>
+                                <tr><th> </th></tr>
+                                <tr><td>Cemetery Name</td><td><input type="text" name="cemeteryName" id="cemeteryName" placeholder="Cemetery Name" style="width:100%"></td> </tr>
+                                <tr><td>Contact Name </td><td><input type="text" name="contactName" id="contactName" placeholder="Contact Name" style="width:100%"> </td> </tr>
+                                <tr><td>Contact Number </td><td><input type="text" name="contactNumber" id="contactNumber" placeholder="Contact Number" style="width:100%"> </td></tr>
+                                <tr><td>Country </td><td><input type="text" name="country" id="country" placeholder="Country" style="width:100%"> </td></tr>
+                                <tr><td>District </td><td><input type="text" name="district_state" id="district_state" placeholder="District" style="width:100%"> </td></tr>
+                                <tr><td>Location Of Cemetery eg 12.06.12:45.63.89 </td><td><input type="text" name="locationOfCemetery" id="locationOfCemetery" placeholder="Cemetery Location" style="width:100%"> </td></tr>
+                                <tr><td>Province/State</td><td><input type="text" name="province_state" id="province_state" placeholder="Province/State" style="width:100%"></td> </tr>
+                                <tr><td>Town</td><td><input type="text" name="town" id="town" placeholder="Town" style="width:100%"></td> </tr>
+                </table>
+                -->
+                    <h1>Submit Listing for approval</h1>
                     <form style="width:20%; margin-left:10%;" id="data">
                         <fieldset style="border:0">
 	                    <input type="text" placeholder="First Name" name="firstName" id="firstName" style="width:100%">
