--- a/src/main/webapp/WEB-INF/views/contact.html
+++ b/src/main/webapp/WEB-INF/views/contact.html
@@ -18,7 +18,8 @@
                     <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/DeceasedListing/publishedlistings">Deceased Listings</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user">Login</a></li>
+                    <li><a href="#" style="margin-left:10% !important;" class="user" id="user">Login</a></li>
+                    <li><a href = "/CemeteryListingsWebApp/" class="logout" id="logout">Logout</a>
                 </ul>  
     </div>
     <div class="dummyHeader">
