seeing the light at the end of the tunnel, stuff looking cool

--- a/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
@@ -27,7 +27,8 @@
             </div>
             <div class="dummyHeader"></div>
                 <div class="pageWrapper">        <!-- this is the beginning of site wrapper will contain the entire pages html -->       
-                    <div class="siteContent">  
+                    <div class="siteContent"> 
+                        <h2 align='center'>Cemeteries</h2>
                         <table class="listings">
                             <tr><th>Cemetery Name</th><th>Location - Country</th><th>Province / State</th><th>District / State</th><th>Town</th><th>Select Cemetery</th></tr>
                             
