--- a/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
+++ b/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
@@ -58,8 +58,9 @@
                                 <tr><td>Town</td><td><input type="text" name="town" id="town" placeholder="Town" style="width:100%"></td> </tr>
                 </table>
                 -->
-                    <h1>Submit Listing for approval</h1>
-                    <form style="width:45%; margin-left:5%;" id="data">
+                    <h1 align ='center'>Submit Listing for approval</h1>
+                    <div class="details" style = "width : 100%; margin-left : 5%">
+                    <form style="width:55%; margin-left:20%;" id="data">
                         <table width = '90%' align='center' border='1px'>
                             <tr><th>Description</th><th>Input</th></tr>
                             <tr><td>First Name</td><td><input type="text" placeholder="First Name" name="firstName" id="firstName" style="width:100%"></td> </tr>
@@ -91,7 +92,7 @@
                     
                     
                    <select name="cemeteryID" id="cemeteryID" style="width:10%; visibility: hidden"></select>
-                        
+                    </div> 
                 </div>
             </div>
         <!-- Script begins here -->
