--- a/src/main/webapp/WEB-INF/views/subscriberDetails.html
+++ b/src/main/webapp/WEB-INF/views/subscriberDetails.html
@@ -26,7 +26,8 @@
         <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
                 <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
                     <h1 align ='center'>Subscriber Details</h1>
-                    <form style="width:50%; margin-left:20%;" id="data"> 
+                    <div class="details" style = "width : 100%; margin-left : 5%">
+                    <form style="width:55%; margin-left:20%;" id="data"> 
                         <!-- username, email, pwd, firstName, surname, lastContributionYear, userRoleID, 
                         Filled in by admin --subscriptionDate, validUntil  -->
                             <table width = '90%' align='center'>
