--- a/src/main/webapp/WEB-INF/views/publishedListingsDetails.html
+++ b/src/main/webapp/WEB-INF/views/publishedListingsDetails.html
@@ -25,54 +25,30 @@
     <div class="pageWrapper">
        
         <div class="siteContent">
-             <h1> Published Listings Details </h1>
-             <div class="details" style = "width : 100%; margin-left : 20%">
-                 <form style="width:50%;" id="data">
-                        <fieldset style="border:0">
-	                    <input disabled type="text" placeholder="First Name" name="firstName" id="firstName" style="width:50%">
-                        </fieldset>
-                        <fieldset style="border:0">
-	                    <input disabled type="text" name="lastName" id="lastName" placeholder="Last Name" style="width:50%">
-                        </fieldset>
-                        <fieldset style="border:0">
-	                    <input disabled type="text" name="maidenName" id="maidenName" placeholder="Maiden Name" style="width:50%">
-	                    </fieldset>
-                        <fieldset style="border:0">
-                        <input disabled type="text" name="gender" id="gender" placeholder="Gender" style="width:50%">
-	                    </fieldset>
-                        <fieldset style="border:0">
-                        <input disabled type="text" name="dateOfBirth" id="dateOfBirth" placeholder="Date Of Birth" style="width:50%">
-	                    </fieldset>
-                        <fieldset disabled style="border:0">
-                        <input type="text" name="dateOfDeath" id="dateOfDeath" placeholder="Date Of Death" style="width:50%">
-                        </fieldset>
-                        <fieldset style="border:0">
-                        <input disabled type="text" name="graveNumber" id="graveNumber" placeholder="Grave Number" style="width:50%">
-	                </fieldset>
-                        <fieldset disabled style="border:0">
-                        <textarea disabled name="graveInscription" id="graveInscription" placeholder="Grave Inscription" style="width:50%; height : auto">
-                        </textarea>
-                        </fieldset>
-                        <fieldset style="border:0">
-                        <input disabled type="text" name="lastKnownContactName" id="lastKnownContactName" placeholder="Last Known Contact Name" style="width:50%">
-                        </fieldset>
-                        <fieldset style="border:0">
-                        <input disabled type="text" name="lastKnownContactNumber" id="lastKnownContactNumber" placeholder="Last Known Contact Number" style="width:50%">
-                        </fieldset>
-                        <fieldset style="border:0">
-                        <input disabled type="text" name="cemeteryID" id="cemeteryID" placeholder="Cemtery ID" style="width:50%">
-                        </fieldset>
-                        <fieldset style="border:0">
-                        <textarea disabled name="otherNames" id="otherNames" placeholder="Other Names, seperated by a comma, end with a full stop" style="width:50%; height : auto">
-                        </textarea>
-                        </fieldset>
-                        <fieldset style="border:0">
-                        <input disabled type="text" name="imageOfBurialSite" id="imageOfBurialSite" placeholder="Image Of Burial Site" style="width:50%">
-                        </fieldset>
-                        <fieldset style="border:0">
-                        <input disabled type="text" name="subscriberSubmitID" id="subscriberSubmitID" placeholder="Subscriber ID" style="width:50%">
-                        </fieldset>
+             <h1 align='center'> Listings Details </h1>
+             <div class="details" style = "width : 100%; margin-left : 5%">
+                 <form style="width:55%; margin-left:20%;" id="data">
+                      <table width = '90%' align='center' border='1px'>
+                            <tr><th>Description </th><th>Input </th></tr>
+                            <tr><td>First Name</td><td><input disabled type="text" placeholder="First Name" name="firstName" id="firstName" style="width:100%"></td> </tr>
+                            <tr><td>Last Name</td><td><input disabled type="text" name="lastName" id="lastName" placeholder="Last Name" style="width:100%"></td> </tr>
+                            <tr><td>Maiden Name</td><td><input disabled type="text" name="maidenName" id="maidenName" placeholder="Maiden Name" style="width:100%"></td> </tr>
+                            <tr><td>Gender</td><td><input disabled type="text" name="gender" id="gender" placeholder="Gender" style="width:100%"></td> </tr>
+                            <tr><td>Date Of Birth</td><td><input disabled type="text" name="dateOfBirth" id="dateOfBirth" placeholder="Date Of Birth" style="width:100%"></td> </tr>
+                            <tr><td>Date Of Death</td><td><input type="text" name="dateOfDeath" id="dateOfDeath" placeholder="Date Of Death" style="width:100%"></td> </tr>
+                            <tr><td>Grave Number</td><td><input disabled type="text" name="graveNumber" id="graveNumber" placeholder="Grave Number" style="width:100%"></td> </tr>
+                            <tr><td>Grave Inscription</td><td><textarea disabled name="graveInscription" id="graveInscription" placeholder="Grave Inscription" style="width:100%; height : auto"></textarea></td> </tr>
+                            <tr><td>Last Known Contact Name</td><td><input disabled type="text" name="lastKnownContactName" id="lastKnownContactName" placeholder="Last Known Contact Name" style="width:100%"></td> </tr>
+                            <tr><td>Last Known Contact Number</td><td><input disabled type="text" name="lastKnownContactNumber" id="lastKnownContactNumber" placeholder="Last Known Contact Number" style="width:100%"></td> </tr>
+                            <tr><td>Cemtery ID</td><td><input disabled type="text" name="cemeteryID" id="cemeteryID" placeholder="Cemtery ID" style="width:100%"></td> </tr>
+                            <tr><td>Other Names</td><td><textarea disabled name="otherNames" id="otherNames" placeholder="Other Names, seperated by a comma, end with a full stop" style="width:100%; height : auto"></textarea></td> </tr>
+                            <tr><td>Image Of Burial Site</td><td><input disabled type="text" name="imageOfBurialSite" id="imageOfBurialSite" placeholder="Image Of Burial Site" style="width:100"></td> </tr>
+                            <tr><td>Subscriber ID</td><td><input disabled type="text" name="subscriberSubmitID" id="subscriberSubmitID" placeholder="Subscriber ID" style="width:100%"></td> </tr>
+                            
+                        </table>     
+                        
 	                </form>
+                 <br>
              </div>
              <table class="listings"></table>
         </div>
