--- a/src/main/webapp/WEB-INF/views/contact.html
+++ b/src/main/webapp/WEB-INF/views/contact.html
@@ -27,9 +27,13 @@
     </div>
     <div class="pageWrapper">
         <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
-            <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
-                    <h1>Contact Us</h1>
+            <div class="siteContent" align='center'>  <!-- this is the beginning of site content will contain all the content --> 
+                    <h1 align='center'>Contact Us</h1>
+                    <br>
                     
+                    <br>
+                    <h3>Please feel free to contact us at:</h3>
+                    <h3 >info@cemeterylistings.co.za</h3>
             </div>
         </div>
     </div>
