--- a/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
+++ b/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
@@ -87,7 +87,8 @@
                             
                         </table>  
                         <br>
-                        <input type="button" name="postUnpublishedListing" id="postUnpublishedListing" value="Submit" > 
+                        <input type="button" name="postUnpublishedListing" id="postUnpublishedListing" value="Submit listing for approval" > 
+                    
                     </form>
                     
                     
